--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,3 +16,27 @@
         url('../fonts/BwModelica-Medium.woff') format('woff'),
         url('../fonts/BwModelica-Medium.otf') format('truetype'),
 }
+
+@font-face {
+    font-family: 'Glacial';
+    src: url('../fonts/GlacialIndifference-Regular.eot');
+    src: url('../fonts/GlacialIndifference-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GlacialIndifference-Regular.woff2') format('woff2'),
+        url('../fonts/GlacialIndifference-Regular.woff') format('woff'),
+        url('../fonts/GlacialIndifference-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Glacial bold';
+    src: url('../fonts/GlacialIndifference-Bold.eot');
+    src: url('../fonts/GlacialIndifference-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GlacialIndifference-Bold.woff2') format('woff2'),
+        url('../fonts/GlacialIndifference-Bold.woff') format('woff'),
+        url('../fonts/GlacialIndifference-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
