--- a/css/part-1.css
+++ b/css/part-1.css
@@ -1,5 +1,7 @@
 header {
-    border-bottom: 1px solid #C9C9C9;
+    margin-bottom: 19px;
+}
+header > div:first-child {
     padding-top: 13px;
     padding-bottom: 12px;
 }
@@ -44,14 +46,14 @@ header {
     font-size: 14px;
 }
 .icon-li:nth-child(3) {
-    padding-left: 19px;
+    padding-left: 21px;
     font-size: 16px;
 }
 .icon-li:nth-child(3) .icon-font {
     color: #919191;
 }
 .icon-li:last-child  {
-    padding-left: 22px;
+    padding-left: 20px;
 }
 .icon-font {
     color: #707070;
@@ -59,4 +61,9 @@ header {
 .icon-li:nth-child(3) .icon-font:hover,
 .icon-font:hover {
     color: #EE3364;
+}
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: #C9C9C9;
 }
