--- a/css/part-3.css
+++ b/css/part-3.css
@@ -4,12 +4,15 @@ main {
     padding: 0 14px;
     margin: 115px auto 86px auto;
     display: grid;
-    gap: 41px;
-    grid-template-columns: 1fr 360px;
+    gap: 15px;
+    grid-template-columns: 1fr 359px;
+}
+.main-content >section {
+    width: 772px;
 }
 .gery-cube {
     width: 100%;
-    height: 473px;
+    height: 472px;
     background-color: #9E9E9E;
     margin-bottom: 28px;
 }
