--- a/css/part-9.css
+++ b/css/part-9.css
@@ -13,7 +13,7 @@ form {
     font-size: 14px;
     line-height: 16.8px;
     color: #666666;  
-    letter-spacing: 1px;
+    letter-spacing: .8px;
 }
 .size {
     width: 395px;
