--- a/css/part-8.css
+++ b/css/part-8.css
@@ -1,5 +1,5 @@
 .main-content section:nth-child(6) {
-    margin-bottom: 165px;
+    margin-bottom: 171px;
 }
 .header-margin {
     margin-bottom: 27px;
@@ -17,7 +17,7 @@
 }
 .comment-box {
     position: relative;
-    height: 233px;
+    height: 232px;
     border: 1px solid #ECECEC;
     border-radius: 2px;
     padding: 27px 30px 21px 32px;
@@ -33,6 +33,9 @@
     height: 78px;
     background-color: #D2D2D2;
     border-radius: 2.6px;
+}
+.comment-content {
+    padding-left: 1px;
 }
 .comment-content >img {
     position: absolute;
@@ -106,6 +109,12 @@ pre >i:first-child {
     margin: unset;
     margin-top: 14px;
 }
+.comment-box:nth-child(2) .name-width {
+    margin-bottom: 8px;
+}
+.comment-box:nth-child(2) .name {
+    line-height: 20px;
+}
 .comment-box:nth-child(2) .comment {
     letter-spacing: -.54px;
 }
@@ -124,11 +133,10 @@ pre >i:first-child {
 .comment-box:nth-child(4) .comment {
     margin-bottom: 14px;
     letter-spacing: -1.3px;
-    padding-left: 2px;
 }
 .comment-box:nth-child(3) .name-width,
 .comment-box:nth-child(4) .name-width {
-    margin-bottom: 2px;
+    margin-bottom: 5px;
     margin-top: 10px;
 }
 .comment-box:nth-child(5),
@@ -141,18 +149,20 @@ pre >i:first-child {
     height: 60px;
 }
 .comment-box:nth-child(5) .name-width {
-    margin-bottom: 11px;
+    margin-bottom: 6px;
 }
 .comment-box:nth-child(5) .name {
-    line-height: 11px;
+    line-height: 23px;
 }
 .comment-box:nth-child(5) .comment,
 .comment-box:nth-child(6) .comment {
     letter-spacing: -1.4px;
-    padding-left: 3px;
 }
 .comment-box:nth-child(6) .name-width {
-    margin-bottom: 6px;
+    margin-bottom: -3px;
+}
+.comment-box:nth-child(6) .name {
+    line-height: 39px;
 }
 .comment-box:nth-child(6) .comment {
     margin-bottom: 14px;
