--- a/css/part-13.css
+++ b/css/part-13.css
@@ -1,5 +1,6 @@
 .sidebar-content >section:nth-child(3) {
     padding: 38px 0 0 31px;
+    margin-bottom: 53px;
 }
 .sidebar-content >section:nth-child(3) h3 {
     padding-left: 7px;
