--- a/css/part-14.css
+++ b/css/part-14.css
@@ -1,5 +1,6 @@
 .sidebar-content >section:nth-child(4) {
     padding: 47px 0 0 35px;
+    margin-bottom: 50px;
 }
 .sidebar-content >section:nth-child(4) h3 {
     font-size: 40px;
